# branded_qr

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  tests.yml
docs/: examples.md  index.md  usage.md
notebooks/: qrcode.ipynb
src/: branded_qr.py
src/branded_qr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_decode.py  test_occlusion.py  test_universities.py
