[project]
name = "branded-qr"
version = "0.1.1"
description = "Generate branded QR codes with a circular logo inset and custom finder/data colors"
requires-python = ">=3.9"
dependencies = [
  "segno>=1.6.6",
  "Pillow>=10.0",
  "numpy>=1.24",
]

[project.scripts]
branded-qr = "branded_qr:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
